@startuml

title __USECASEINTERACTOR's Class Diagram__\n

  namespace FourCats {
    namespace UseCaseInteractor {
      class FourCats.UseCaseInteractor.DeclineBALSuggestion {
          + DeclineBALSuggestion()
          + declineSuggestion()
      }
    }
  }
  

  namespace FourCats {
    namespace UseCaseInteractor {
      class FourCats.UseCaseInteractor.GenerateBAL {
          + GenerateBAL()
          + generateBAL()
      }
    }
  }
  

  namespace FourCats {
    namespace UseCaseInteractor {
      class FourCats.UseCaseInteractor.GenerateBALSuggestions {
          + GenerateBALSuggestions()
          + generateSuggestions()
          - extractActorName()
          - extractScenarioName()
          - generateAction()
          - generateObject()
      }
    }
  }
  

  FourCats.UseCaseInteractor.DeclineBALSuggestion .up.|> FourCats.Port.DeclineBALSuggestionInputPort
  FourCats.UseCaseInteractor.DeclineBALSuggestion o-- FourCats.Port.DeclineBALSuggestionOutputPort : out
  FourCats.UseCaseInteractor.DeclineBALSuggestion o-- FourCats.InterfaceAccess.RepositoryAccess : repo
  FourCats.UseCaseInteractor.GenerateBAL .up.|> FourCats.Port.GenerateBALInputPort
  FourCats.UseCaseInteractor.GenerateBAL o-- FourCats.InterfaceAccess.BalAnalyzer : balAnalyzer
  FourCats.UseCaseInteractor.GenerateBAL o-- FourCats.Port.GenerateBALOutputPort : out
  FourCats.UseCaseInteractor.GenerateBAL o-- FourCats.InterfaceAccess.RepositoryAccess : repo
  FourCats.UseCaseInteractor.GenerateBALSuggestions .up.|> FourCats.Port.GenerateBALSuggestionsInputPort
  FourCats.UseCaseInteractor.GenerateBALSuggestions o-- FourCats.Port.GenerateBALSuggestionsOutputPort : out
  FourCats.UseCaseInteractor.GenerateBALSuggestions o-- FourCats.InterfaceAccess.RepositoryAccess : repo
  FourCats.UseCaseInteractor.GenerateBALSuggestions o-- FourCats.InterfaceAccess.TextAnalyzer : textAnalyzer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
